<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.github.lorenzobettini.edelta</groupId>
    <artifactId>edelta.tests.parent</artifactId>
    <version>3.8.1-SNAPSHOT</version>
    <relativePath>../edelta.tests.parent/pom.xml</relativePath>
  </parent>
  <artifactId>edelta.ui.tests</artifactId>
  <packaging>eclipse-test-plugin</packaging>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <systemProperties>-Dedelta.interpreter.timeout=30000</systemProperties>
    <!-- Workaround for https://bugs.eclipse.org/bugs/show_bug.cgi?id=397015 -->
    <sonar.sources></sonar.sources>
    <sonar.tests>src</sonar.tests>
  </properties>

  <profiles>
    <profile>
      <id>macos</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>target-platform-configuration</artifactId>
            <configuration>
              <dependency-resolution>
                <extraRequirements combine.children="append">
                  <!-- This allows us to take the fragment org.eclipse.jdt.launching.macosx
                    See https://github.com/LorenzoBettini/jbase/issues/3 
                    https://www.eclipse.org/forums/index.php/t/1073366/ -->
                  <requirement>
                    <type>eclipse-feature</type>
                    <id>org.eclipse.jdt</id>
                    <versionRange>0.0.0</versionRange>
                  </requirement>
                </extraRequirements>
              </dependency-resolution>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-surefire-plugin</artifactId>
        <configuration>
          <rerunFailingTestsCount>3</rerunFailingTestsCount>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <configuration>
          <dependency-resolution>
            <extraRequirements
              combine.children="append">
              <!-- We specify our feature so that we're sure we're using 
                also all the required software -->
              <requirement>
                <type>eclipse-feature</type>
                <id>edelta.feature</id>
                <versionRange>0.0.0</versionRange>
              </requirement>
            </extraRequirements>
          </dependency-resolution>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
